--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 <body>
   <div id="container">
     <div id="tabs">
-      <div class="tab active" data-sort="rank">Rank</div>
+      <div class="tab active" data-sort="rank">Full List</div>
       <div class="tab" data-sort="main">Main List</div>
       <div class="tab" data-sort="extended">Extended List</div>
       <div class="tab" data-sort="legacy">Legacy List</div>
