--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
           filtered.sort((a, b) => Number(a[7]) - Number(b[7]));
           break;
         case 'order':
-          filtered.sort((a, b) => Number(a[18]) - Number(b[18]));
+          filtered.sort((a, b) => Number(b[18]) - Number(a[18]));
           break;
         case 'enjoyment':
           filtered.sort((a, b) => Number(b[9]) - Number(a[9]));
