--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       <div class="tab" data-sort="legacy">Legacy List</div>
       <div class="tab" data-sort="gddl">GDDL</div>
       <div class="tab" data-sort="pemon">PEMON</div>
-      <div class="tab" data-sort="order">Order Beaten</div>
+      <div class="tab" data-sort="order">Recently Added/History</div>
       <div class="tab" data-sort="enjoyment">Enjoyment</div>
       <div class="tab" data-sort="worstfail">Worst Fail</div>
       <div class="tab" data-sort="changelog">Changelog</div>
