--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Level List with Sorting Tabs & Changelog</title>
+  <title>if you're reading this dm me on discord, hi!!!</title>
   <style>
     body {
       font-family: Arial, sans-serif;
