--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
       <div class="tab" data-sort="enjoyment">Enjoyment</div>
       <div class="tab" data-sort="worstfail">Worst Fail</div>
       <div class="tab" data-sort="highestattempts">Highest Attempts</div>
-      <div class="tab" data-sort="classicmode">Classic Mode</div>
-      <div class="tab" data-sort="platformermode">Platformer Mode</div>
+      <div class="tab" data-sort="classicmode">Classic Full List</div>
+      <div class="tab" data-sort="platformermode">Platformer Full List</div>
       <div class="tab" data-sort="changelog">Changelog</div>
     </div>
     <div id="search-container" style="text-align:center; margin-bottom: 15px;">
