--- a/index.html
+++ b/index.html
@@ -175,14 +175,14 @@
       <div class="tab" data-sort="main">Main List</div>
       <div class="tab" data-sort="extended">Extended List</div>
       <div class="tab" data-sort="legacy">Legacy List</div>
+      <div class="tab" data-sort="order">Recently Added/History</div>
+      <div class="tab" data-sort="classicmode">Classic List</div>
+      <div class="tab" data-sort="platformermode">Platformer List</div>
+      <div class="tab" data-sort="enjoyment">Enjoyment</div>
       <div class="tab" data-sort="gddl">GDDL</div>
       <div class="tab" data-sort="pemon">PEMON</div>
-      <div class="tab" data-sort="order">Recently Added/History</div>
-      <div class="tab" data-sort="enjoyment">Enjoyment</div>
-      <div class="tab" data-sort="worstfail">Worst Fail</div>
       <div class="tab" data-sort="highestattempts">Highest Attempts</div>
-      <div class="tab" data-sort="classicmode">Classic Full List</div>
-      <div class="tab" data-sort="platformermode">Platformer Full List</div>
+      <div class="tab" data-sort="worstfail">Worst Fail</div>
       <div class="tab" data-sort="changelog">Changelog</div>
     </div>
     <div id="search-container" style="text-align:center; margin-bottom: 15px;">
