Change info row labels in index.html

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
       extraDetails.innerHTML = `
         <h2 class="expanded-title">${rankText} - ${data[3]}</h2>
         ${modeBlock}
-        ${createInfoRow(['Order Beaten', 'Level ID'], [chrono, data[20]])}
+        ${createInfoRow(['Completion #', 'Level ID'], [chrono, data[20]])}
         ${createInfoRow(
           ['PGDDL', 'GDDL', 'PEMON', 'Enjoyment'],
           [data[5], data[6], data[7], data[9]]
